--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,6 +2,11 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: "NodejsTemplate"
+  name: example
+  links:
+    - url: https://dashboard.example.com
+      title: My Dashboard
+      icon: dashboard
 spec:
   type: service
   owner: user:guest
