--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,6 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
+  name: NodeJsTemplate
   annotations:
     github.com/project-slug: MyOrgBackstage/backstage
 spec:
